--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jose": "^6.0.12",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
@@ -87,6 +89,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jspdf": "^1.3.3",
     "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
