--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/jspdf": "^1.3.3",
     "@types/next": "^8.0.7",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
