atualizações no sistema: menu para telas menores, e ajustes no superadmin

--- a/env.example
+++ b/env.example
@@ -1,10 +1,13 @@
 # ===========================================
-# CONFIGURAÇÕES DO BANCO DE DADOS (ZOER.AI)
+# CONFIGURAÇÕES DO BANCO DE DADOS (SUPABASE/ZOER.AI)
 # ===========================================
-# Substitua pelos valores fornecidos pela Zoer.ai
-POSTGREST_URL=https://sua-instancia.zoer.ai
+# Substitua pelos valores fornecidos pela Zoer.ai / Supabase
+NEXT_PUBLIC_SUPABASE_URL=https://sua-instancia.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sua-chave-anonima
+SUPABASE_SERVICE_ROLE_KEY=sua-chave-service-role
+POSTGREST_URL=https://sua-instancia.supabase.co/rest/v1
 POSTGREST_SCHEMA=public
-POSTGREST_API_KEY=sua-chave-api-aqui
+POSTGREST_API_KEY=sua-chave-anonima
 
 # ===========================================
 # CONFIGURAÇÕES DE AUTENTICAÇÃO
