feat: Implementa pÃ¡gina de configuraÃ§Ã£o fiscal para FocusNFe
- Cria pÃ¡gina /configuracao-fiscal com 3 abas (IntegraÃ§Ã£o, Certificado, Status)
- Implementa upload de certificado digital (.pfx/.p12) com senha
- Adiciona funcionalidade de provisionamento de empresa na FocusNFe
- Melhora tratamento de erros nas rotas de API fiscal
- Adiciona validaÃ§Ã£o de UUID e mensagens de erro mais descritivas
- Implementa seguranÃ§a: token nÃ£o Ã© exibido, apenas indicaÃ§Ã£o visual
- Adiciona link no menu lateral (GestÃ£o > ConfiguraÃ§Ã£o Fiscal)
- Cria script create-env-local.js para facilitar configuraÃ§Ã£o
- Adiciona script npm run create-env no package.json
- Cria documentaÃ§Ã£o completa em docs/CONFIGURACAO-FISCAL-IMPLEMENTACAO.md
- Melhora script dev para abrir navegador automaticamente

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "node scripts/dev-with-browser.js",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start --port 22278",
@@ -18,7 +18,8 @@
     "db-manager": "node scripts/db-manager.js",
     "quick-fix": "node scripts/quick-fix.js",
     "supabase-admin": "node scripts/supabase-admin.js",
-    "apply-unique": "node scripts/apply-unique-constraints.js"
+    "apply-unique": "node scripts/apply-unique-constraints.js",
+    "create-env": "node scripts/create-env-local.js"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
